03 Modules  Classes is started

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 
     <script src="01 Introduction.js"></script>
     <script src="02 Syntax Changes  Additions.js"></script>
+    <script src="03 Modules  Classes.js"></script>
   </body>
 </html>
