03 Modules Classes is finished

--- a/03 Modules Classes/index.html
+++ b/03 Modules Classes/index.html
@@ -6,10 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <button>Test</button>
-
-    <script src="01 Introduction.js"></script>
-    <script src="02 Syntax Changes  Additions.js"></script>
-    <script src="03 Modules  Classes.js"></script>
+    <script src="script.js"></script>
+    <!-- <script src="external.js"></script> -->
   </body>
 </html>
